Google Optimize added

--- a/index.html
+++ b/index.html
@@ -1,40 +1,42 @@
 <!doctype html>
 <html>
 	<head>
-	
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-156819073-1">
+		
+		<!-- Global site tag (gtag.js) - Google Analytics and Google Optimize -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-156819073-1">
 	</script>
-	<script>
+		<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-156819073-1');
+  gtag('config', 'UA-156819073-1', { 'optimize_id': 'GTM-NXSLVW2'});
 	</script>
-	
-	<!-- Google Tag Manager -->
-	<script>
+		<!-- End Global site tag (gtag.js) - Google Analytics and Google Optimize -->
+		
+		<!-- Google Tag Manager -->
+		<script>
 (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-MHD6WVL');
 </script>
-	<!-- End Google Tag Manager -->
-	
-	<meta charset="utf-8">
-	<title>Untitled Document</title>
+		<!-- End Google Tag Manager -->
+		
+		<meta charset="utf-8">
+		<title>Untitled Document</title>
 	</head>
 	
 	<body>
-	<!-- Google Tag Manager (noscript) -->
-	<noscript>
-	<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MHD6WVL"
+		<!-- Google Tag Manager (noscript) -->
+		<noscript>
+		<iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MHD6WVL"
 height="0" width="0" style="display:none;visibility:hidden"></iframe>
-	</noscript>
-	<!-- End Google Tag Manager (noscript) -->
-	<img src="img/topBackground.svg"
+		</noscript>
+		<!-- End Google Tag Manager (noscript) -->
+		
+		<img src="img/topBackground.svg"
      class="TopBackground">
 	</body>
 </html>
