Laptop újrarakás előtt

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		
 		<meta charset="utf-8">
 		<title>Tádá Photography</title>
-		<link rel="stylesheet" type="text/css" href="style/index.css">
+		<link rel="stylesheet" type="text/css" href="css/index.css">
 	</head>
 	
 	<body>
@@ -41,7 +41,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe>
 			<h1>Tádá Photography</h1>
 			<!--<h6 style="font-size: 10%">Egy Bolyai Farkas Elméleti Liceum-os startup</h6>-->
 		</div>
+		
+		
 		<img src="img/logo.png" id="logo" alt="Tádá Photography's logo">
+		
+		<iframe width="600" height="430" src="//www.cincopa.com/media-platform/iframe.aspx?fid=A0LAgpuiwMKm" frameborder="0" allowfullscreen scrolling="no"></iframe>
+		
+		
 		<h2>That know ask case sex ham dear her spot</h2>
 		<p>Perpetual sincerity out suspected necessary one but provision satisfied. Respect nothing use set waiting pursuit nay you looking. If on prevailed concluded ye abilities. Address say you new but minuter greater. Do denied agreed in innate. Can and middletons thoroughly themselves him. Tolerably sportsmen belonging in september no am immediate newspaper. Theirs expect dinner it pretty indeed having no of. Principle september she conveying did eat may extensive.</p>
 		<p>At distant inhabit amongst by. Appetite welcomed interest the goodness boy not. Estimable education for disposing pronounce her. John size good gay plan sent old roof own. Inquietude saw understood his friendship frequently yet. Nature his marked ham wished.</p>
