--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
 		<table style="padding-bottom: 2.5%;">
 			<th style="width: 33.33%;">
 				<div id="facebookDiv">
-					<a href="https://www.facebook.com/tada.photography.bfel" target="_blank" style="text-decoration: none; color: whitesmoke">
+					<a href="https://www.facebook.com/tada.photography.bfel" target="_blank"
+						style="text-decoration: none; color: whitesmoke">
 						<table>
 							<th><img src="icons/facebook.svg" style="text-align: left;"></th>
 							<th>
@@ -131,7 +132,8 @@
 			</th>
 			<th style="width: 33.33%;">
 				<div id="messengerDiv">
-					<a href="https://www.messenger.com/t/tada.photography.bfel" target="_blank" style="text-decoration: none; color: whitesmoke">
+					<a href="https://www.messenger.com/t/tada.photography.bfel" target="_blank"
+						style="text-decoration: none; color: whitesmoke">
 						<table>
 							<th><img src="icons/messenger.svg" style="text-align: left;"></th>
 							<th>
@@ -145,9 +147,16 @@
 		</table>
 	</div>
 	<div id="copyrightTexts">
-		<div style="text-align: center;">Icons made by <a href="http://www.freepik.com/" title="Freepik"
-				style="text-decoration: none; color: whitesmoke;">Freepik</a> from <a href="https://www.flaticon.com/"
-				title="Flaticon" style="text-decoration: none; color: whitesmoke;">www.flaticon.com</a></div>
+		<div style="text-align: center;">Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect"
+				title="Pixel perfect" style="text-decoration: none; color: whitesmoke;">Pixel perfect</a>, <a
+				href="https://www.flaticon.com/authors/freepik" title="Freepik"
+				style="text-decoration: none; color: whitesmoke;">Freepik</a>, <a
+				href="https://www.flaticon.com/authors/vitaly-gorbachev" title="Vitaly Gorbachev"
+				style="text-decoration: none; color: whitesmoke;">Vitaly
+				Gorbachev</a> from
+			<a href="https://www.flaticon.com/" title="Flaticon"
+				style="text-decoration: none; color: whitesmoke;">www.flaticon.com</a></div>
+
 	</div>
 </body>
 
