--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
 	</script>
 	<!-- End Google Tag Manager -->
 
+	<script type="text/javascript">
+		function isMobileDevice() {
+			return (typeof window.orientation !== "undefined") || (navigator.userAgent.indexOf('IEMobile') !== -1);
+		};
+		if (isMobileDevice()) {
+			window.location.replace("https://tada.tk/m/");
+		}
+	</script>
 	<meta charset="utf-8">
 	<title>Tádá Photography</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
