--- a/m/index.html
+++ b/m/index.html
@@ -100,7 +100,7 @@
         <table>
             <th>
                 <div id="facebookDiv">
-                    <a href="https://www.facebook.com/tada.photography.bfel" target="_top">
+                    <a href="https://m.facebook.com/tada.photography.bfel" target="_top">
                         <img src="../icons/facebook.svg" style="text-align: left;">
                     </a>
                 </div>
@@ -114,7 +114,7 @@
             </th>
             <th>
                 <div id="messengerDiv">
-                    <a href="https://www.messenger.com/t/tada.photography.bfel" target="_top">
+                    <a href="https://m.messenger.com/t/tada.photography.bfel" target="_top">
                         <img src="../icons/messenger.svg" style="text-align: left;">
                     </a>
                 </div>
